View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023722 | Open CASCADE | OCCT:Data Exchange | public | 2013-01-24 15:38 | 2013-04-29 15:22 |
Reporter | ika | Assigned To | ika | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.5.4 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023722: stack overflow during reading IGES in Test Harness | ||||
Description | Stack overflow during reading IGES in Test Harness, when wire has same edges, which entities are different. | ||||
Steps To Reproduce | restore face.brep brepiges face face.igs igesbrep face.igs a * | ||||
Tags | No tags attached. | ||||
Test case number | bug heal(011) bug23722 | ||||
|
face.brep (152,438 bytes) |
|
Add creation a new vertex before replace. Git branch CR23722 is ready to be reviewed. Dear GKA, Please review. |
|
Branch CR23722 is ready to test. |
|
Dear ika, could you please rebase CR23722 branch with current master. |
|
Rebasing has been done, branch CR23722 is ready to test. |
|
Dear BugMaster, Branch CR23722 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: f4f8cd84e54cd388bc984521a88972f4dbe6ebaf Number of compiler warnings: occt component : Linux: 3 (3 on master) Windows: 57 (57 on master) products component : Linux: 9 (9 on master) Windows: 50 (50 on master) Regressions: No regressions Improvements: No improvements Testing cases: http://occt-tests/CR23722-master-occt/Mandriva2010/bugs/heal/bug23722.html bug heal(011) bug23722 - is BAD. |
|
Dear BugMaster, Test case bugs heal(011) bug23722 was corrected. Now test case bugs heal(011) bug23722 is OK. Testing cases: bugs heal(011) bug23722 - OK. Testing on Linux: Total MEMORY difference: 218224596 / 217617252 Total CPU difference: 10917.04999999986 / 9351.070000000449 Testing on Windows: Total MEMORY difference: 298513972 / 306610752 Total CPU difference: 11589.65625 / 11643.765625 There are not serious differences in images found by testdiff. |
occt: master 163ef250 2013-02-08 10:56:38 Details Diff |
0023722: stack overflow during reading IGES in Test Harness Add creation a new vertex before replace. Adding of test cases for CR23722 |
Affected Issues 0023722 |
|
mod - src/ShapeFix/ShapeFix_IntersectionTool.cxx | Diff File | ||
add - tests/bugs/heal/bug23722 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-01-24 15:38 | ika | New Issue | |
2013-01-24 15:38 | ika | Assigned To | => ika |
2013-01-24 15:38 | ika | File Added: face.brep | |
2013-01-25 10:59 | ika | Note Added: 0023137 | |
2013-01-25 10:59 | ika | Assigned To | ika => gka |
2013-01-25 10:59 | ika | Status | new => resolved |
2013-01-25 11:15 |
|
Note Added: 0023139 | |
2013-01-25 11:15 |
|
Status | resolved => reviewed |
2013-01-25 18:16 |
|
Assigned To | gka => mkv |
2013-01-28 19:27 |
|
Note Added: 0023187 | |
2013-01-28 19:27 |
|
Assigned To | mkv => ika |
2013-01-28 19:27 |
|
Status | reviewed => feedback |
2013-01-29 11:15 | ika | Note Added: 0023198 | |
2013-01-29 11:15 | ika | Status | feedback => assigned |
2013-01-29 11:15 | ika | Assigned To | ika => mkv |
2013-01-29 11:15 | ika | Status | assigned => reviewed |
2013-01-30 20:42 |
|
Assigned To | mkv => ika |
2013-01-30 20:42 |
|
Status | reviewed => feedback |
2013-01-30 20:43 |
|
Assigned To | ika => mkv |
2013-01-30 20:43 |
|
Status | feedback => reviewed |
2013-02-05 15:44 |
|
Note Added: 0023265 | |
2013-02-05 15:45 |
|
Test case number | => bug heal(011) bug23722 |
2013-02-05 15:45 |
|
Assigned To | mkv => ika |
2013-02-05 15:45 |
|
Status | reviewed => assigned |
2013-02-05 15:45 |
|
Note Edited: 0023265 | |
2013-02-07 17:05 |
|
Note Added: 0023280 | |
2013-02-07 17:06 |
|
Assigned To | ika => bugmaster |
2013-02-07 17:06 |
|
Status | assigned => resolved |
2013-02-07 17:06 |
|
Status | resolved => reviewed |
2013-02-07 17:06 |
|
Status | reviewed => tested |
2013-02-11 17:42 | ika | Changeset attached | => occt master 163ef250 |
2013-02-11 17:42 | ika | Assigned To | bugmaster => ika |
2013-02-11 17:42 | ika | Status | tested => verified |
2013-02-11 17:42 | ika | Resolution | open => fixed |
2013-04-23 13:36 |
|
Status | verified => closed |
2013-04-29 15:22 |
|
Fixed in Version | => 6.6.0 |