0023722: stack overflow during reading IGES in Test Harness Add creation a new vertex before replace. Adding of test cases for CR23722